# binary-security-check

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: archive.rs  cmdline.docopt  cmdline.rs  command-line-after-help.txt  elf.rs  errors.rs  main.rs  options.rs  parser.rs  pe.rs  ui.rs
src/archive/: mod.rs
src/elf/: checked_functions.rs  mod.rs  needed_libc.rs
src/options/: mod.rs  status.rs
src/pe/: mod.rs
tools/: x86_64-unknown-freebsd-clang.sh
