# Copyright 2018-2021 Koutheir Attouchi.
# See the "LICENSE.txt" file at the top-level directory of this distribution.
#
# Licensed under the the MIT license. This file may not be copied, modified,
# or distributed except according to those terms.

[package]
name = "binary-security-check"
version = "1.2.4"
authors = [ "Koutheir Attouchi <koutheir@gmail.com>" ]
license = "MIT"
description = "Analyzer of security features in executable binaries"
edition = "2021"
documentation = "https://docs.rs/binary-security-check"
readme = "README.md"
homepage = "https://github.com/koutheir/binary-security-check"
repository = "https://github.com/koutheir/binary-security-check"
categories = [
    "command-line-utilities",
    "development-tools",
    "visualization",
]
keywords = [
    "security",
    "aslr",
    "stack-overflow",
    "control-flow-guard",
    "fortify-source",
    ]

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = true

[dependencies]
docopt       = { version = "1.1" }
thiserror    = { version = "1.0" }
goblin       = { version = "0.4" }
lazy_static  = { version = "1.4" }
log          = { version = "0.4" }
memmap       = { version = "0.7" }
rayon        = { version = "1.5" }
regex        = { version = "1.5" }
scroll       = { version = "0.10" }
serde        = { version = "1.0" }
serde_derive = { version = "1.0" }
simplelog    = { version = "0.10" }
termcolor    = { version = "1.1" }
memoffset    = { version = "0.6" }
