# Copyright 2018-2024 Koutheir Attouchi.
# See the "LICENSE.txt" file at the top-level directory of this distribution.
#
# Licensed under the MIT license. This file may not be copied, modified,
# or distributed except according to those terms.

[package]
name = "binary-security-check"
version = "1.2.15"
authors = ["Koutheir Attouchi <koutheir@gmail.com>"]
license = "MIT"
description = "Analyzer of security features in executable binaries"
edition = "2021"
documentation = "https://docs.rs/binary-security-check"
readme = "README.md"
homepage = "https://github.com/koutheir/binary-security-check"
repository = "https://github.com/koutheir/binary-security-check"
categories = ["command-line-utilities", "development-tools", "visualization"]
keywords = [
  "security",
  "aslr",
  "stack-overflow",
  "control-flow-guard",
  "fortify-source",
]

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'unwind'
incremental      = false
overflow-checks  = true

[dependencies]
thiserror    = { version = "1.0" }
goblin       = { version = "0.8" }
once_cell    = { version = "1.19" }
log          = { version = "0.4" }
memmap2      = { version = "0.9" }
rayon        = { version = "1.8" }
regex        = { version = "1.10" }
scroll       = { version = "0.12" }
flexi_logger = { version = "0.27" }
termcolor    = { version = "1.4" }
memoffset    = { version = "0.9" }

clap = { version = "4.5", features = [
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
] }
